--- a/Atlas/app/equipes/Equipe1/index.html
+++ b/Atlas/app/equipes/Equipe1/index.html
@@ -1,30 +1,75 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Équipe 1 - Atlas urbain</title>
+  <meta charset="UTF-8">
+  <title>Disparités Socio-Économiques - Équipe 1</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-  <!-- MapLibre CSS -->
-  <link href="https://unpkg.com/maplibre-gl@^3.0.0/dist/maplibre-gl.css" rel="stylesheet" />
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <!-- Feuille de style MapLibre -->
+  <link href="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.css" rel="stylesheet">
 
-  <style>
-    #map {
-      width: 100%;
-      height: 90vh;
-    }
-  </style>
+  <!-- Feuille de style personnalisée -->
+  <link rel="stylesheet" href="app.css">
+
+  <!-- Librairie pour créer un séparateur glissable entre deux sections -->
+  <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
 </head>
-
 <body>
-  <div id="equipe1-container">
-    <div id="map"></div>
+
+  <!-- Conteneur principal avec carte et panneau d'information côte à côte -->
+  <div id="mainContainer">
+
+    <!-- Carte interactive MapLibre -->
+    <div id="map" class="split"></div>
+
+    <!-- Panneau latéral contenant l'histogramme et les infos -->
+    <div id="infoPanel" class="split">
+      <div class="panel-header">
+        <h5>(Recensement du Canada 2021)</h5>
+        <h3>Recensement du Canada 2021</h3>
+        <p>Maisons individuelles et duplex</p>
+      </div>
+
+      <!-- Histogramme dynamique -->
+      <canvas id="histogram" height="100"></canvas>
+
+      <!-- Texte explicatif -->
+      <div class="panel-body">
+        <h5>par CensusMapper</h5>
+        <p><em>Basé sur le Recensement du Canada 2021</em></p>
+        <p>Cette carte montre le pourcentage des logements occupés qui sont des maisons individuelles ou des duplex.</p>
+        <p><strong>Date :</strong> 2025-01-30</p>
+      </div>
+    </div>
   </div>
 
-  <!-- MapLibre JS -->
-  <script src="https://unpkg.com/maplibre-gl@^3.0.0/dist/maplibre-gl.js"></script>
-  <!-- Script de l'équipe 1 -->
+  <!-- Légende choroplèthe (seulement affichée en exemple, sans lien avec la carte) -->
+  <div id="legendChoropleth">
+    <div class="legend-item" style="background-color:#1f3a93">0,0%</div>
+    <div class="legend-item" style="background-color:#4169e1">10,0%</div>
+    <div class="legend-item" style="background-color:#87ceeb">20,0%</div>
+    <div class="legend-item" style="background-color:#d4f1f9">30,0%</div>
+    <div class="legend-item" style="background-color:#ffffcc">40,0%</div>
+    <div class="legend-item" style="background-color:#f4a261">60,0%</div>
+    <div class="legend-item" style="background-color:#e76f51">80,0%</div>
+    <div class="legend-item" style="background-color:#b22222">90,0%</div>
+  </div>
+
+  <!-- Bouton pour afficher/masquer les arrondissements -->
+<div id="arrondissementBtn" class="maplibregl-ctrl maplibregl-ctrl-group" style="position: absolute; top: 130px; left: 10px;">
+  <button id="toggleArrondissement" title="Afficher les arrondissements">
+    🗺️
+  </button>
+</div>
+
+
+  <!-- Librairie MapLibre GL JS pour la carte -->
+  <script src="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.js"></script>
+
+  <!-- Librairie Chart.js pour le graphique -->
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+
+  <!-- Script principal contenant l'initialisation de la carte, etc. -->
   <script src="./app.js" type="text/javascript"></script>
 </body>
 </html>
