--- a/Atlas/app/equipes/Equipe1/index.html
+++ b/Atlas/app/equipes/Equipe1/index.html
@@ -4,25 +4,21 @@
   <meta charset="UTF-8">
   <title>Disparités Socio-Économiques - Équipe 1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-  <!-- Feuille de style MapLibre -->
-  <link href="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.css" rel="stylesheet">
-
-  <!-- Feuille de style personnalisée -->
+  <!-- Bibliothèque MapLibre GL -->
+  <link href="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.css" rel="stylesheet" />
+  <!-- Votre stylesheet personnalisé -->
   <link rel="stylesheet" href="app.css">
-
-  <!-- Librairie pour créer un séparateur glissable entre deux sections -->
+  <!-- Split.js pour séparer la carte et le panneau -->
   <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
 </head>
 <body>
 
-  <!-- Conteneur principal avec carte et panneau d'information côte à côte -->
+  <!-- Conteneur principal: carte + panneau -->
   <div id="mainContainer">
-
-    <!-- Carte interactive MapLibre -->
+    <!-- Carte interactive -->
     <div id="map" class="split"></div>
 
-    <!-- Panneau latéral contenant l'histogramme et les infos -->
+    <!-- Panneau latéral -->
     <div id="infoPanel" class="split">
       <div class="panel-header">
         <h5>(Recensement du Canada 2021)</h5>
@@ -43,33 +39,51 @@
     </div>
   </div>
 
-  <!-- Légende choroplèthe (seulement affichée en exemple, sans lien avec la carte) -->
-  <div id="legendChoropleth">
-    <div class="legend-item" style="background-color:#1f3a93">0,0%</div>
-    <div class="legend-item" style="background-color:#4169e1">10,0%</div>
-    <div class="legend-item" style="background-color:#87ceeb">20,0%</div>
-    <div class="legend-item" style="background-color:#d4f1f9">30,0%</div>
-    <div class="legend-item" style="background-color:#ffffcc">40,0%</div>
-    <div class="legend-item" style="background-color:#f4a261">60,0%</div>
-    <div class="legend-item" style="background-color:#e76f51">80,0%</div>
-    <div class="legend-item" style="background-color:#b22222">90,0%</div>
+  <!-- Légende choroplèthe (exemple statique) -->
+  <div id="legendChoropleth"></div>
+
+
+  <!-- Bouton d'affichage des arrondissements -->
+  <div id="arrondissementBtn"
+       class="maplibregl-ctrl maplibregl-ctrl-group"
+       style="position: absolute; top: 130px; left: 10px;">
+    <button id="toggleArrondissement" title="Afficher/Masquer les arrondissements">
+      🗺️
+    </button>
   </div>
 
-  <!-- Bouton pour afficher/masquer les arrondissements -->
-<div id="arrondissementBtn" class="maplibregl-ctrl maplibregl-ctrl-group" style="position: absolute; top: 130px; left: 10px;">
-  <button id="toggleArrondissement" title="Afficher les arrondissements">
-    🗺️
-  </button>
-</div>
+  <!-- Menu déroulant pour choisir une variable -->
+  <!-- Par exemple placé plus bas (ou replacé en haut) selon votre préférence -->
+  <div class="dropdown"
+       style="position: absolute; top: 180px; left: 10px; z-index: 999;">
+    <button class="dropbtn">📊 Choisir une variable</button>
+    <div class="dropdown-content" id="variableDropdown">
+      <!-- Les options sont générées en JS -->
+    </div>
+  </div>
 
 
-  <!-- Librairie MapLibre GL JS pour la carte -->
+
+  <div id="tooltip" style="
+  position: absolute;
+  z-index: 999;
+  background: white;
+  padding: 6px 10px;
+  border-radius: 6px;
+  box-shadow: 0 1px 4px rgba(0,0,0,0.3);
+  font-size: 12px;
+  pointer-events: none;
+  display: none;
+"></div>
+
+
+  <!-- Librairie MapLibre GL JS -->
   <script src="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.js"></script>
-
-  <!-- Librairie Chart.js pour le graphique -->
+  <!-- Librairie Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
-  <!-- Script principal contenant l'initialisation de la carte, etc. -->
+  <!-- Script principal (JS) : configuration de la carte, histogramme, etc. -->
   <script src="./app.js" type="text/javascript"></script>
+
 </body>
 </html>
