--- a/Atlas/app/equipes/Equipe1/index.html
+++ b/Atlas/app/equipes/Equipe1/index.html
@@ -4,85 +4,125 @@
   <meta charset="UTF-8">
   <title>Disparités Socio-Économiques - Équipe 1</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <!-- Bibliothèque MapLibre GL -->
-  <link href="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.css" rel="stylesheet" />
-  <!-- Votre stylesheet personnalisé -->
+
+  <!-- Import de la feuille de style personnalisée -->
   <link rel="stylesheet" href="app.css">
-  <!-- Split.js pour séparer la carte et le panneau -->
+
+  <!-- Import de MapLibre GL -->
+  <link href="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.css" rel="stylesheet" />
+
+  <!-- Import de Split.js pour séparer la carte et le panneau -->
   <script src="https://unpkg.com/split.js/dist/split.min.js"></script>
 </head>
 <body>
 
-  <!-- Conteneur principal: carte + panneau -->
+  <!--
+    Conteneur principal qui contient la carte (gauche) et le panneau latéral (droite).
+    L'attribut "id" permet de cibler l'élément dans app.js pour Split.js.
+  -->
   <div id="mainContainer">
-    <!-- Carte interactive -->
+    <!-- Zone de la carte -->
     <div id="map" class="split"></div>
 
-    <!-- Panneau latéral -->
+    <!-- Panneau latéral : histogramme, texte explicatif, légende, etc. -->
     <div id="infoPanel" class="split">
-      <div class="panel-header">
-        <h5>(Recensement du Canada 2021)</h5>
-        <h3>Recensement du Canada 2021</h3>
-        <p>Maisons individuelles et duplex</p>
-      </div>
+      
+ <!-- En-tête du panneau -->
+<div class="panel-header">
+  <h5 style="text-align: center;">Recensement du Canada 2021</h5>
+  <h3 class="panel-title">Disparités Socio-économiques dans la Ville de Montréal</h3>
+  <p id="panelVariableSubtitle" class="panel-subtitle">
+    Sélectionnez une variable dans le menu
+  </p>
+</div>
 
-      <!-- Histogramme dynamique -->
+
+      <!-- Histogramme dynamique (Chart.js) -->
       <canvas id="histogram" height="100"></canvas>
 
-      <!-- Texte explicatif -->
-      <div class="panel-body">
-        <h5>par CensusMapper</h5>
-        <p><em>Basé sur le Recensement du Canada 2021</em></p>
-        <p>Cette carte montre le pourcentage des logements occupés qui sont des maisons individuelles ou des duplex.</p>
-        <p><strong>Date :</strong> 2025-01-30</p>
-      </div>
-    </div>
-  </div>
+      <hr style="margin: 1.5rem 0; border: none; border-top: 1px solid #ccc;" />
 
-  <!-- Légende choroplèthe (exemple statique) -->
+
+     <!-- Texte explicatif -->
+<div class="panel-body">
+  <h5>Par Ibrahima Khalil Mbacke</h5>
+  <p><em>Basé sur le Recensement du Canada 2021</em></p>
+
+  <p>
+    Cette application interactive présente les <strong>disparités socio-économiques</strong> 
+    entre les secteurs de recensement de la région de Montréal. Cinq variables issues du 
+    Recensement canadien de 2021 sont proposées :
+  </p>
+
+  <ul>
+    <li><strong>💰 Revenu médian des ménages</strong></li>
+    <li><strong>💵 Revenu médian des individus</strong></li>
+    <li><strong>📉 Taux de chômage (%)</strong></li>
+    <li><strong>🎓 Diplômés universitaires (%)</strong></li>
+    <li><strong>🌍 Densité de population</strong> (hab./km²)</li>
+  </ul>
+  
+
+  <p>
+    Pour chaque variable sélectionnée, une carte choroplèthe est générée dynamiquement, 
+    accompagnée d’un histogramme montrant la distribution de la variable à travers les secteurs. 
+    L’utilisateur peut cliquer sur une barre de l’histogramme pour mettre en évidence 
+    les secteurs appartenant à une même classe de valeur.
+  </p>
+
+  <div class="note-box">
+    <p class="histogram-expl">
+      <strong>Note méthodologique :</strong><br />
+      Les données statistiques ont été regroupées en classes selon des seuils définis pour chaque variable.
+      L’histogramme indique le nombre de secteurs dans chaque classe.
+      Plus la barre est haute, plus la variable est concentrée dans cette plage de valeur.
+    </p>
+  </div>
+  
+
+  <p><strong>Date :</strong> 2025-04-14</p>
+</div>
+
+
+  <!-- Légende choroplèthe dynamique (dessinée par updateLegend(...)) -->
   <div id="legendChoropleth"></div>
 
-
-  <!-- Bouton d'affichage des arrondissements -->
+  <!-- Bouton pour afficher/masquer les arrondissements -->
   <div id="arrondissementBtn"
-       class="maplibregl-ctrl maplibregl-ctrl-group"
-       style="position: absolute; top: 130px; left: 10px;">
-    <button id="toggleArrondissement" title="Afficher/Masquer les arrondissements">
-      🗺️
-    </button>
-  </div>
+     class="maplibregl-ctrl maplibregl-ctrl-group"
+     style="position: absolute; top: 145px; left: 10px;">
+  <button id="toggleArrondissement" title="Afficher/Masquer les arrondissements">
+    🗺️
+  </button>
+</div>
 
-  <!-- Menu déroulant pour choisir une variable -->
-  <!-- Par exemple placé plus bas (ou replacé en haut) selon votre préférence -->
-  <div class="dropdown"
-       style="position: absolute; top: 180px; left: 10px; z-index: 999;">
+
+  <!-- Menu déroulant dynamique (variables à sélectionner) -->
+  <div class="dropdown" style="position: absolute; top: 180px; left: 10px; z-index: 999;">
     <button class="dropbtn">📊 Choisir une variable</button>
     <div class="dropdown-content" id="variableDropdown">
-      <!-- Les options sont générées en JS -->
+      <!-- Les <a> sont injectés en JS (updateChoropleth(...)) -->
     </div>
   </div>
 
+  <!-- Infobulle (tooltip) pour le survol des polygones -->
+  <div id="tooltip"
+       style="position: absolute; z-index: 999;
+              background: white; padding: 6px 10px;
+              border-radius: 6px; box-shadow: 0 1px 4px rgba(0,0,0,0.3);
+              font-size: 12px; pointer-events: none;
+              display: none;">
+  </div>
 
 
-  <div id="tooltip" style="
-  position: absolute;
-  z-index: 999;
-  background: white;
-  padding: 6px 10px;
-  border-radius: 6px;
-  box-shadow: 0 1px 4px rgba(0,0,0,0.3);
-  font-size: 12px;
-  pointer-events: none;
-  display: none;
-"></div>
 
+  
 
-  <!-- Librairie MapLibre GL JS -->
+  <!-- Import de MapLibre GL JS -->
   <script src="https://unpkg.com/maplibre-gl@^5.3.0/dist/maplibre-gl.js"></script>
-  <!-- Librairie Chart.js -->
+  <!-- Import de Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-  <!-- Script principal (JS) : configuration de la carte, histogramme, etc. -->
+  <!-- Script principal (logique JS) -->
   <script src="./app.js" type="text/javascript"></script>
 
 </body>
