--- a/Atlas/app/equipes/Equipe2/index.html
+++ b/Atlas/app/equipes/Equipe2/index.html
@@ -142,7 +142,7 @@
             <svg class="bi me-2" width="16" height="16">
               <use xlink:href="#people-circle" />
             </svg>
-            Équipe 2 : Titre
+            Équipe 2 : Stationnements
           </a>
         </li>
         <li>
@@ -203,7 +203,7 @@
     <div id="rightMenu" class="container-fluid bg-dark">
       <div class="row" style="padding: 10px; height: 100%;">
         <div class="col" style="height: 100%;">
-          <h5 class="card-title text-white">Titre</h5>
+          <h5 class="card-title text-white">Application cartographique visant à faciliter la visualisation des stationnements disponibles durant les périodes de déneigements dans les arrondissements concernés de Montréal</h5>
         </div>
       </div>
     </div>
@@ -238,6 +238,12 @@ crossorigin="anonymous"></script>
 <!-- ================================================== -->
 
 <!-- ================================================== -->
+<script type='text/javascript' src="./arret-stationnement.js"></script>
+<script type='text/javascript' src="./hexagon-index.js"></script>
+<script type='text/javascript' src="./stationnement.js"></script>
+<script type='text/javascript' src="./nbre-de-site.js"></script>
+<script type='text/javascript' src="./navigate-controls.js"></script>
 <script type='text/javascript' src="../app.js"></script>
-<!-- ================================================== -->
+
+<!-- ================================================== -->
 </html>
