--- a/Atlas/app/equipes/Equipe2/index.html
+++ b/Atlas/app/equipes/Equipe2/index.html
@@ -240,10 +240,11 @@ crossorigin="anonymous"></script>
 <!-- ================================================== -->
 <script type='text/javascript' src="./arret-stationnement.js"></script>
 <script type='text/javascript' src="./hexagon-index.js"></script>
+<script type='text/javascript' src="./mouse-interactions.js"></script>
 <script type='text/javascript' src="./stationnement.js"></script>
-<script type='text/javascript' src="./nbre-de-site.js"></script>
+<script type='text/javascript' src="./nombre _de_site.JS"></script>
 <script type='text/javascript' src="./navigate-controls.js"></script>
-<script type='text/javascript' src="../app.js"></script>
+<script type='text/javascript' src="./app.js"></script>
 
 <!-- ================================================== -->
 </html>
