--- a/Atlas/app/index.html
+++ b/Atlas/app/index.html
@@ -142,7 +142,7 @@
             <svg class="bi me-2" width="16" height="16">
               <use xlink:href="#people-circle" />
             </svg>
-            Équipe 2 : Titre
+            Équipe 2 : Stationnements
           </a>
         </li>
         <li>
@@ -195,7 +195,7 @@
     <div id="bottomMenu" class="container-fluid bg-dark">
       <div class="row" style="padding: 10px; height: 100%;">
         <div class="col-12" style="height: 100%;">
-          <h5 class="card-title text-white">Titre</h5>
+          <h5 class="card-title text-white">Équipe 2</h5>
         </div>
       </div>
     </div>
@@ -203,7 +203,7 @@
     <div id="rightMenu" class="container-fluid bg-dark">
       <div class="row" style="padding: 10px; height: 100%;">
         <div class="col" style="height: 100%;">
-          <h5 class="card-title text-white">Titre</h5>
+          <h5 class="card-title text-white">Application cartographique visant à faciliter la visualisation des stationnements disponibles durant les périodes de déneigements dans les arrondissements concernés de Montréal</h5>
         </div>
       </div>
     </div>
@@ -238,6 +238,13 @@ crossorigin="anonymous"></script>
 <!-- ================================================== -->
 
 <!-- ================================================== -->
-<script type='text/javascript' src="./app.js"></script>
-<!-- ================================================== -->
+<script type='text/javascript' src="./equipes/Equipe2/arret-stationnement.JS"></script>
+<script type='text/javascript' src="./equipes/Equipe2/hexagon-index.js"></script>
+<script type='text/javascript' src="./equipes/Equipe2/mouse-interactions.js"></script>
+<script type='text/javascript' src="./equipes/Equipe2/stationnement.js"></script>
+<script type='text/javascript' src="./equipes/Equipe2/nombre _de_site.JS"></script>
+<script type='text/javascript' src="./equipes/Equipe2/navigate-controls.js"></script>
+<script type='text/javascript' src="./equipes/Equipe2/app.js"></script>
+
+<!-- ================================================== -->
 </html>
