--- a/Atlas/app/equipes/Equipe2/index.html
+++ b/Atlas/app/equipes/Equipe2/index.html
@@ -238,13 +238,11 @@ crossorigin="anonymous"></script>
 <!-- ================================================== -->
 
 <!-- ================================================== -->
-<script type='text/javascript' src="./arret-stationnement.js"></script>
-<script type='text/javascript' src="./hexagon-index.js"></script>
-<script type='text/javascript' src="./mouse-interactions.js"></script>
-<script type='text/javascript' src="./stationnement.js"></script>
-<script type='text/javascript' src="./nombre _de_site.JS"></script>
-<script type='text/javascript' src="./navigate-controls.js"></script>
-<script type='text/javascript' src="./app.js"></script>
+<script src="arret-stationnement.js"></script>
+<script src="hexagon-index.js"></script>
+<script src="stationnement.js"></script>
+<script src="nombre-de-site.js"></script>
+<script src="app.js"></script>
 
 <!-- ================================================== -->
 </html>
