--- a/Atlas/app/equipes/Equipe2/index.html
+++ b/Atlas/app/equipes/Equipe2/index.html
@@ -205,6 +205,12 @@
         <div class="col" style="height: 100%;">
           <h5 class="card-title text-white">Application cartographique visant à faciliter la visualisation des stationnements disponibles durant les périodes de déneigements dans les arrondissements concernés de Montréal</h5>
         </div>
+        <div class="map-overlay">
+          <button id="toggleArretStationnement" class="btn btn-primary btn-sm">Arrêts STM</button>
+          <button id="toggleDensiteHexagon" class="btn btn-primary btn-sm">Densité Hexagonale</button>
+          <button id="togglePlacesStationnement" class="btn btn-primary btn-sm">Places et Heures de Stationnement</button>
+          <button id="toggleNbreDeSite" class="btn btn-primary btn-sm">Nombre de Sites/arrondissements</button>
+        </div>
       </div>
     </div>
 
@@ -214,16 +220,21 @@
     <div id="Equipe4"></div>
     <div id="Equipe5"></div>
 
+
   </main>
-
-
+  <div id="map"></div>
 </body>
+
+
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
 integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
 crossorigin="anonymous"></script>
 
 <div id="map"></div>
+<div id="map"></div>
+
+
 
 <!-- Bootstrap core JavaScript -->
 <!-- ================================================== -->
