--- a/Atlas/app/index.html
+++ b/Atlas/app/index.html
@@ -205,7 +205,7 @@
         <div class="col" style="height: 100%;">
           <h5 class="card-title text-white">Application cartographique visant à faciliter la visualisation des stationnements disponibles durant les périodes de déneigements dans les arrondissements concernés de Montréal</h5>
         </div>
-        <div class="map-overlay">
+<div class="map-overlay">
           <button id="toggleArretStationnement" class="btn btn-primary btn-sm">Arrêts STM</button>
           <button id="toggleDensiteHexagon" class="btn btn-primary btn-sm">Densité Hexagonale</button>
           <button id="togglePlacesStationnement" class="btn btn-primary btn-sm">Places et Heures de Stationnement</button>
@@ -221,7 +221,7 @@
     <div id="Equipe5"></div>
 
   </main>
-  <div id="map"></div>
+
 
 </body>
 
@@ -230,8 +230,6 @@ integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cD
 crossorigin="anonymous"></script>
 
 <div id="map"></div>
-<div id="map"></div>
-
 
 <!-- Bootstrap core JavaScript -->
 <!-- ================================================== -->
@@ -251,6 +249,7 @@ crossorigin="anonymous"></script>
 <script type='text/javascript' src="./equipes/Equipe2/mouse-interactions.js"></script>
 <script type='text/javascript' src="./equipes/Equipe2/stationnement.js"></script>
 <script type='text/javascript' src="./equipes/Equipe2/nombre-de-site.js"></script>
+<script type='text/javascript' src="./equipes/Equipe2/navigate-controls.js"></script>
 <script type='text/javascript' src="./equipes/Equipe2/app.js"></script>
 
 <!-- ================================================== -->
