--- a/Atlas/app/index.html
+++ b/Atlas/app/index.html
@@ -206,12 +206,14 @@
         <div class="col" style="height: 100%;">
           <h5 class="card-title text-white">Application cartographique visant à faciliter la visualisation des stationnements disponibles durant les périodes de déneigements dans les arrondissements concernés de Montréal</h5>
         </div>
+        <button id="createBuffer">Créer Buffer</button>
 <div class="map-overlay">
           <button id="toggleArretStationnement" class="btn btn-primary btn-sm">Arrêts STM</button>
           <button id="toggleDensiteHexagon" class="btn btn-primary btn-sm">Densité Hexagonale</button>
           <button id="togglePlacesStationnement" class="btn btn-primary btn-sm">Places et Heures de Stationnement</button>
           <button id="toggleNbreDeSite" class="btn btn-primary btn-sm">Nombre de Sites/arrondissements</button>
         </div>
+        <button id="toggle3D">2D / 2.5D pour Sites/arrondissements</button>
       </div>
     </div>
 
